--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.first{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+h1{
+color: rgba(136, 136, 238, 0.532);
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+ul{
+  list-style: none;
+  
+}
+li{
+  display: inline-block;
+}
+.first{
+  display: flex;
+  justify-content: space-between;
+}
+.body {
+  width: 100%;
+  height: 500px;
+  background-color: linear-gradient(rgb(123, 123, 232), rgb(234, 93, 93));
+}
+.container{
+  background: rgba(255, 0, 0, 0.044);
+  height: 200px;
+}
+.carousel-inner{
+  background-color:red;
+}
+.carousel-item{
+  background-color: none;
+ max-height: 300px;
+ min-height: 100px;
+}
+.card1{
+  display: flex;
+  justify-content: space-around;
+  margin-top: 5%;
 }
